# Boids-Simulation

./: CMakeLists.txt
include/: Flock.h  Particle.h  Rule.h  Swarm.h  Utils.h
src/: Flock.cpp  Particle.cpp  Rule.cpp  Swarm.cpp  Utils.cpp  main.cpp
